src/manifests/backend-linkerd-demo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-linkerd-demo
  namespace: linkerd-demo-workload
spec:
  replicas: 2
  selector:
    matchLabels:
      run: backend-linkerd-demo
  strategy: {}
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      creationTimestamp: null
      labels:
        run: backend-linkerd-demo
    spec:
      containers:
      - image: moimhossain/backend-linkerd-demo:latest
        imagePullPolicy: Always
        imagePullSecrets:
        - name: dockerhub
        name: backend-linkerd-demo
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
status: {}
---

apiVersion: v1
kind: Service
metadata:
  name: backend-linkerd-demo
  namespace: linkerd-demo-workload
spec:
  ports:
  - port: 80
  selector:
    run: backend-linkerd-demo
---
