src/manifests/stockweb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: stockweb
  namespace: stocks
spec:
  replicas: 1
  selector:
    matchLabels:
      run: stockweb
  strategy: {}
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      creationTimestamp: null
      labels:
        run: stockweb
    spec:
      containers:
      - env:
        - name: StockData__Address
          value: http://stockdata
        - name: DOTNET_SYSTEM_NET_HTTP_SOCKETSHTTPHANDLER_HTTP2UNENCRYPTEDSUPPORT
          value: "true"
        image: moimhossain/stockweb:latest
        imagePullPolicy: Always
        name: stockweb
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
status: {}
---

apiVersion: v1
kind: Service
metadata:
  name: stockweb
  namespace: stocks
spec:
  type: LoadBalancer 
  ports:
  - port: 80
  selector:
    run: stockweb
---
